@@ -24,8 +24,6 @@ import java.util.*;
 import org.apache.activemq.command.ActiveMQDestination;
 import org.apache.activemq.filter.DestinationMap;
 import org.apache.activemq.filter.DestinationMapEntry;
-import org.apache.activemq.filter.DestinationMapNode;
-import org.apache.activemq.filter.DestinationNode;
 
 /**
  * Represents a destination based configuration of policies so that individual
@@ -248,7 +246,7 @@ public class DefaultAuthorizationMap extends DestinationMap implements Authoriza
         if (i < constructors.length) {
             instance = constructors[i].newInstance(param);
         } else {
-            instance = cls.newInstance();
+            instance = cls.getConstructor().newInstance();
             Method[] methods = cls.getMethods();
             i = 0;
             for (i = 0; i < methods.length; i++) {
