@@ -19,14 +19,14 @@ package org.apache.activemq.tool;
 
 import java.util.Properties;
 
-import javax.jms.BytesMessage;
-import javax.jms.Connection;
-import javax.jms.ConnectionFactory;
-import javax.jms.DeliveryMode;
-import javax.jms.Destination;
-import javax.jms.JMSException;
-import javax.jms.Message;
-import javax.jms.Session;
+import jakarta.jms.BytesMessage;
+import jakarta.jms.Connection;
+import jakarta.jms.ConnectionFactory;
+import jakarta.jms.DeliveryMode;
+import jakarta.jms.Destination;
+import jakarta.jms.JMSException;
+import jakarta.jms.Message;
+import jakarta.jms.Session;
 
 import org.apache.activemq.ActiveMQConnectionFactory;
 import org.apache.activemq.broker.BrokerService;
@@ -82,20 +82,20 @@ public class JMSMemtest {
 
     public JMSMemtest(Properties settings) {
         url = settings.getProperty("url");
-        topic = new Boolean(settings.getProperty("topic")).booleanValue();
-        durable = new Boolean(settings.getProperty("durable")).booleanValue();
-        connectionCheckpointSize = new Integer(settings.getProperty("connectionCheckpointSize")).intValue();
-        producerCount = new Integer(settings.getProperty("producerCount")).intValue();
-        consumerCount = new Integer(settings.getProperty("consumerCount")).intValue();
-        messageCount = new Integer(settings.getProperty("messageCount")).intValue();
-        messageSize = new Integer(settings.getProperty("messageSize")).intValue();
-        prefetchSize = new Integer(settings.getProperty("prefetchSize")).intValue();
-        checkpointInterval = new Integer(settings.getProperty("checkpointInterval")).intValue() * 1000;
-        producerCount = new Integer(settings.getProperty("producerCount")).intValue();
+        topic = Boolean.parseBoolean(settings.getProperty("topic"));
+        durable = Boolean.parseBoolean(settings.getProperty("durable"));
+        connectionCheckpointSize = Integer.valueOf(settings.getProperty("connectionCheckpointSize"));
+        producerCount = Integer.valueOf(settings.getProperty("producerCount"));
+        consumerCount = Integer.valueOf(settings.getProperty("consumerCount"));
+        messageCount = Integer.valueOf(settings.getProperty("messageCount"));
+        messageSize = Integer.valueOf(settings.getProperty("messageSize"));
+        prefetchSize = Integer.valueOf(settings.getProperty("prefetchSize"));
+        checkpointInterval = Integer.valueOf(settings.getProperty("checkpointInterval")) * 1000;
+        producerCount = Integer.valueOf(settings.getProperty("producerCount"));
         reportName = settings.getProperty("reportName");
         destinationName = settings.getProperty("destinationName");
         reportDirectory = settings.getProperty("reportDirectory");
-        connectionInterval = connectionCheckpointSize * 1024;
+        connectionInterval = connectionCheckpointSize * 1024L;
     }
 
     public static void main(String[] args) {
@@ -171,7 +171,7 @@ public class JMSMemtest {
 
     protected boolean resetConnection(int counter) {
         if (connectionInterval > 0) {
-            long totalMsgSizeConsumed = counter * 1024;
+            long totalMsgSizeConsumed = counter * 1024L;
             if (connectionInterval < totalMsgSizeConsumed) {
                 return true;
             }
@@ -290,17 +290,17 @@ public class JMSMemtest {
         Properties settings = new Properties();
         settings.setProperty("domain", topic ? "topic" : "queue");
         settings.setProperty("durable", durable ? "durable" : "non-durable");
-        settings.setProperty("connection_checkpoint_size_kb", new Integer(connectionCheckpointSize).toString());
-        settings.setProperty("producer_count", new Integer(producerCount).toString());
-        settings.setProperty("consumer_count", new Integer(consumerCount).toString());
-        settings.setProperty("message_count", new Long(messageCount).toString());
-        settings.setProperty("message_size", new Integer(messageSize).toString());
-        settings.setProperty("prefetchSize", new Integer(prefetchSize).toString());
-        settings.setProperty("checkpoint_interval", new Integer(checkpointInterval).toString());
+        settings.setProperty("connection_checkpoint_size_kb", Integer.valueOf(connectionCheckpointSize).toString());
+        settings.setProperty("producer_count", Integer.valueOf(producerCount).toString());
+        settings.setProperty("consumer_count", Integer.valueOf(consumerCount).toString());
+        settings.setProperty("message_count", Long.valueOf(messageCount).toString());
+        settings.setProperty("message_size", Integer.valueOf(messageSize).toString());
+        settings.setProperty("prefetchSize", Integer.valueOf(prefetchSize).toString());
+        settings.setProperty("checkpoint_interval", Integer.valueOf(checkpointInterval).toString());
         settings.setProperty("destination_name", destinationName);
         settings.setProperty("report_name", reportName);
         settings.setProperty("report_directory", reportDirectory);
-        settings.setProperty("connection_checkpoint_size", new Integer(connectionCheckpointSize).toString());
+        settings.setProperty("connection_checkpoint_size", Integer.valueOf(connectionCheckpointSize).toString());
         return settings;
     }
 
